🚧 Poc for resource upload
